[gd_scene load_steps=3 format=3 uid="uid://btqx071e7kyhc"]

[ext_resource type="Script" path="res://scripts/debug.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://b0u8rsea27h4h" path="res://icon.svg" id="2"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextEdit" type="TextEdit" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Discord Embedded App SDK for Godot
(this is not a shell, terminal, or a command prompt. just for output.)
"

[node name="Panel" type="Panel" parent="HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Panel/ScrollContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="UserPanel" type="Panel" parent="HBoxContainer/Panel/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 74)
layout_mode = 2

[node name="UserAvatar" type="TextureRect" parent="HBoxContainer/Panel/ScrollContainer/VBoxContainer/UserPanel"]
layout_mode = 0
offset_left = 5.0
offset_top = 5.0
offset_right = 78.0
offset_bottom = 78.0
texture = ExtResource("2")
expand_mode = 2

[node name="UserName" type="Label" parent="HBoxContainer/Panel/ScrollContainer/VBoxContainer/UserPanel"]
layout_mode = 0
offset_left = 75.0
offset_top = 5.0
text = "SDK Playground"

[node name="UserId" type="Label" parent="HBoxContainer/Panel/ScrollContainer/VBoxContainer/UserPanel"]
layout_mode = 0
offset_left = 75.0
offset_top = 25.0
text = "https://github.com/kuylar/
discord-embedded-godot"

[node name="UserId2" type="Label" parent="HBoxContainer/Panel/ScrollContainer/VBoxContainer/UserPanel"]
layout_mode = 0
offset_left = 75.0
offset_top = 25.0
text = "https://github.com/kuylar/
discord-embedded-godot"

[node name="ButtonCaptureLog" type="Button" parent="HBoxContainer/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Capture Log"

[node name="ButtonEncourageHwAccel" type="Button" parent="HBoxContainer/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Encourage Hardware Accellaration"

[node name="ButtonGetChannel" type="Button" parent="HBoxContainer/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Get Channel"

[node name="ButtonGetChannelPermissions" type="Button" parent="HBoxContainer/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Get Channel Permissions"

[node name="ButtonGetEntitlements" type="Button" parent="HBoxContainer/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Get Entitlements"

[node name="ButtonGetInstanceConnectedParticipants" type="Button" parent="HBoxContainer/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Get Instance Connected Participants"

[node name="ButtonGetPlatformBehaviors" type="Button" parent="HBoxContainer/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Get Platform Behaviors"

[node name="ButtonGetSkus" type="Button" parent="HBoxContainer/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Get SKUs"

[node name="ButtonInitiateImageUpload" type="Button" parent="HBoxContainer/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Initiate Image Upload"

[node name="ButtonOpenExternalLink" type="Button" parent="HBoxContainer/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Open External Link"

[node name="ButtonOpenInviteDialog" type="Button" parent="HBoxContainer/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Open Invite Dialog"

[node name="ButtonOpenShareMomentDialog" type="Button" parent="HBoxContainer/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Open Share Moment Dialog"

[node name="ButtonSetActivity" type="Button" parent="HBoxContainer/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Set Activity"

[node name="ButtonSetConfig" type="Button" parent="HBoxContainer/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Set Config"

[node name="ButtonSetOrientationLockState" type="Button" parent="HBoxContainer/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Set Orientation Lock State"

[node name="ButtonStartPurchase" type="Button" parent="HBoxContainer/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Start Purchase"

[node name="ButtonUserSettingsGetLocale" type="Button" parent="HBoxContainer/Panel/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Get User Locale"

[connection signal="pressed" from="HBoxContainer/Panel/ScrollContainer/VBoxContainer/ButtonCaptureLog" to="." method="_on_ButtonCaptureLog_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel/ScrollContainer/VBoxContainer/ButtonEncourageHwAccel" to="." method="_on_ButtonEncourageHwAccel_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel/ScrollContainer/VBoxContainer/ButtonGetChannel" to="." method="_on_ButtonGetChannel_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel/ScrollContainer/VBoxContainer/ButtonGetChannelPermissions" to="." method="_on_ButtonGetChannelPermissions_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel/ScrollContainer/VBoxContainer/ButtonGetEntitlements" to="." method="_on_ButtonGetEntitlements_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel/ScrollContainer/VBoxContainer/ButtonGetInstanceConnectedParticipants" to="." method="_on_ButtonGetInstanceConnectedParticipants_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel/ScrollContainer/VBoxContainer/ButtonGetPlatformBehaviors" to="." method="_on_ButtonGetPlatformBehaviors_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel/ScrollContainer/VBoxContainer/ButtonGetSkus" to="." method="_on_ButtonGetSkus_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel/ScrollContainer/VBoxContainer/ButtonInitiateImageUpload" to="." method="_on_ButtonInitiateImageUpload_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel/ScrollContainer/VBoxContainer/ButtonOpenExternalLink" to="." method="_on_ButtonOpenExternalLink_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel/ScrollContainer/VBoxContainer/ButtonOpenInviteDialog" to="." method="_on_ButtonOpenInviteDialog_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel/ScrollContainer/VBoxContainer/ButtonOpenShareMomentDialog" to="." method="_on_ButtonOpenShareMomentDialog_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel/ScrollContainer/VBoxContainer/ButtonSetActivity" to="." method="_on_ButtonSetActivity_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel/ScrollContainer/VBoxContainer/ButtonSetConfig" to="." method="_on_ButtonSetConfig_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel/ScrollContainer/VBoxContainer/ButtonSetOrientationLockState" to="." method="_on_ButtonSetOrientationLockState_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel/ScrollContainer/VBoxContainer/ButtonStartPurchase" to="." method="_on_ButtonStartPurchase_pressed"]
[connection signal="pressed" from="HBoxContainer/Panel/ScrollContainer/VBoxContainer/ButtonUserSettingsGetLocale" to="." method="_on_ButtonUserSettingsGetLocale_pressed"]
